# portfolio-skyline

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
components/: AddHoldingModal.tsx  AnimateStack.tsx  AnimatedBar.tsx  AppHeader.tsx  Dashboard.tsx  DashboardServer.tsx  DashboardSkeleton.tsx  FreshnessBadge.tsx  HeroBackdrop.tsx  HeroValue.tsx  HoldingsBoot.tsx  LensPicker.tsx  LensView.tsx  MarketGex.tsx  MarketGexChart.tsx  MarketGexInfoPopover.tsx  PageSection.tsx  RefreshButton.tsx  SectionLabel.tsx  SharedPortfolioBanner.tsx  StockSearchBar.tsx  ThemeToggle.tsx  TimeRangeToggle.tsx  UniverseNav.tsx  UpdateStamps.tsx  ValidationError.tsx  ViewToggle.tsx  Watermark.tsx  WatermarkSettings.tsx
lib/: chart-colors.ts  dashboard-prep-loader.ts  data-loader.ts  design-tokens.ts  detail-data.ts  finance-metrics.ts  format.ts  freshness.ts  holdings.ts  insider-fetch.ts  lenses.ts  market-gex-loader.ts  metric-catalog.ts  metric-fetch.ts  motion.ts  performance.ts  portfolio-stats.ts  sector-colors.ts  stock-data-loader.ts  stock-prices-fetch.ts  types.ts  use-lens.ts  use-theme.ts  watermark-store.ts
pipeline/: .cik_map.json  __init__.py  add_tickers.py  biweekly_fundamentals.py  build_dashboard_prep.py  compute_brand_colors.py  compute_derived.py  compute_gex.py  compute_risk_factors.py  config.py  daily_prices.py  edinet_daily.py  fetch_sp500_list.py  io_utils.py  orchestrate.py  pull_daily.py  pull_fx.py  pull_insider.py  pull_market_gex.py  pull_patent_images.py  pull_patents.py  pull_quarterly.py  (+6 more)
(+6907 files in other folders)
